--- a/Robintrack project.ipynb
+++ b/Robintrack project.ipynb
@@ -3549,6 +3549,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**If you are viewing the notebook on GitHub, the interactive graph will not show because GitHub performs a static render of the notebooks and it doesn't include the embedded HTML/JavaScript that makes up a plotly graph. Click https://nbviewer.jupyter.org/github/dpn29/Robintrack-project/blob/master/Robintrack%20project.ipynb to see the all the graphs.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The (`date`,`ticker`) entry in `returns` is the percent return on `ticker` when held from `date` to `date + 1day`."
    ]
   },
